assets/overrides.css
/* Overrides stylesheet */

.alignright {
    padding: 0 0 10px 10px;
    float: right;
}

.aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto }
}


#proposition {
    width: 100%;
    height: 300px;
    background-image: url('/assets/company-profile-v3.svg');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    margin-bottom: 15px;
}

a:hover { color: #5b5b5b; }



#subheader {
    background-color: #5b5b5b;
    border-color: #5b5b5b;
}

.slide {
    border-color: #5b5b5b;
}

.btn-slide, .btn-slide.active {
    background-color: #5b5b5b;
}

.logo {
    margin-top: 0px;
    margin-bottom: 0px;
}

body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, th, td {
    font-size: 15px;
}

#content ul, ol {
    list-style-position: outside;
    margin-left: 17px;
    margin-top: 1em;
    margin-bottom: 1em;
}

#content ul {
    list-style: circle;
}

#content ul ul {
    list-style: disc;
}

#content h1 {
    font-size: 2em;
    margin-top: 1em;
    margin-bottom: 0.5em;
}

#content h2 {
    font-size: 1.8em;
    margin-top: 1em;
    margin-bottom: 0.25em;
}

#content h3 {
    font-size: 1.5em;
}

#content h4 {
    font-size: 1.3em;
}

#content h5 {
    font-size: 1.1em;
}

#content h6 {
    font-size: 1em;
}

code {
    word-wrap: break-word;
}

.pagination {
    margin-top: 10px;
}

ul.pagination {
    margin-left: -5px;
    list-style: none;
}

ul.pagination li { 
    height: 20px;
    line-height: 19px;
    padding: 3px 7px 0px;
}

ul.pagination li a {
    width: auto;
    padding: 0px 7px 0px;
}

li.relatedPost {
    margin-top: 3px;
    margin-bottom: 6px;
}

#footer {
    color: #aaa;
}

#footer a {
    color: #ddd;
    font-size: 15px;
}

#footer a:hover {
    color: #aaa;
    text-decoration: underline;
}

.small {
    color: #aaa;
}


.ca-sub {
    line-height: 15px;
}

/* Set colours */

a {color: #1d76c3;}
.colorme {color:#1d76c3;}
.nav-bar > li:hover, .nav-bar > li a:hover  { color: #1d76c3;}
.nav-bar > li.active > a { }
ul.flyout li a:hover, .nav-bar li ul li a:hover {color:#1d76c3;}
.flyout {border-top:2px solid #1d76c3;}
.sectiontitle {border-left: 4px solid #1d76c3;}
::-moz-selection{background:#1d76c3;color:#fff;}
::selection{background:#1d76c3;color:#fff;}
.ca-menu li:hover .ca-main {color: #1d76c3;}
.topborder { border-top:4px solid #1d76c3;}
.readmore {background:#1d76c3;}
/* #subheader {background: #1d76c3;border-top: 1px solid #1d76c3; color: #fff;} */
 #subheader a {color: #eee;}
 #subheader a:hover {color: #fff;}
 .readmore {background:#1d76c3;}
 #testimonials blockquote cite {color:#1d76c3;}
 .tags {background:#1d76c3;}
 ul.pagination li.current a {background: #1d76c3;}
.saymore {color:#1d76c3;}
.submit {background:#1d76c3;} 
dl.tabs dd.active { border-bottom: 3px solid #1d76c3;}
ul.accordion > li.active {border-top: 3px solid #1d76c3;}
div.alert-box.default { background-color: #1d76c3;}
.slide {    margin: 0;  padding: 0; border-top: solid 4px #1d76c3;}
.btn-slide {    background:#1d76c3 url(../../images/plus.png) no-repeat;}
.btn-slide.active { background: #1d76c3 url(../../images/minus.png) no-repeat;}
#footer {border-top:#1d76c3 4px solid;}
.back-top a:hover{background-color: #1d76c3;}
.sf-shadow ul {border-top:2px solid #1d76c3;}
.panel {border-left:4px solid #1d76c3;}
blockquote {border-left:4px solid #1d76c3;}
.colorbackground {background:#1d76c3;}
a.projectdetail { background: #1d76c3;opacity:0.8;}
a.projectdetail:hover { background: #1d76c3;opacity:1.0;}
#testimonials {border-left: solid 6px #1d76c3;}
.ei-title h2{background:#1d76c3;} 

/* Menu */

.nav-bar {
    position: absolute;
    top: 0px;
    right: 30px;
}

/*Strip the ul of padding and list styling*/
ul #menu {
    list-style-type:none;
    margin:0;
    padding:0;
    /* position: absolute; */
    text-align: right;
}

/*Create a horizontal list with spacing*/
#menu li {
    display:inline-block;
    float: left;
    margin-right: 1px;
}

/*Style for menu links*/
#menu li a {
    display:block;
    /* min-width:140px; */
    height: 50px;
    text-align: center;
    line-height: 50px;
    /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
    text-decoration: none;
}

/*Hover state for top level links*/
#menu li:hover a {
    
}

/*Style for dropdown links*/
#menu li:hover ul a {
    color: #5b5b5b;
    height: 40px;
    line-height: 40px;
}

/*Hover state for dropdown links*/
#menu li:hover ul a:hover {
    color: #5b5b5b;
}

/*Hide dropdown links until they are needed*/
#menu li ul {
    display: none;
}

/*Make dropdown links vertical*/
ul #menu li ul li {
    display: block;
    float: none;
}

/*Prevent text wrapping*/
ul #menu li ul li a {
    width: auto;
    min-width: 100px;
    padding: 0 20px;
}

/*Display the dropdown on hover*/
ul #menu li a:hover + .hidden, .hidden:hover {
    display: block;
}

/*Style 'show menu' label button and hide it by default*/
.show-menu {
    text-decoration: none;
    position: absolute;
    top: 20px;
    right: 20px;
    z-index: 1000;
    color: #000;
    text-align: right;
    padding: 10px 0;
    display: none;
    font-size: 2em;
}

/*Hide checkbox*/
input[type=checkbox].hide {
    display: none;
}

/*Show menu when invisible checkbox is checked*/
input[type=checkbox]:checked ~ #menu {
    display: block;
}

.banner-image {
    width: 100%;
    margin-bottom: 35px;
}

.right {
    text-align: right;
}

#search-box {
    
    width: 100%;
    
}

input.gsc-input,
.gsc-input-box,
.gsc-input-box-hover,
.gsc-input-box-focus,
.gsc-search-button {
    box-sizing: content-box; 
    line-height: normal;
}

.gsc-search-button {
    
    background-image: #1d76c3;
}

.blogrow {

}

.boxblog {
    height: 100%;
}

.section-icon {
    float:right;
    color: #1d76c3;
    margin: 0 20px 20px 20px;
    font-size: 5vw;}

/*Responsive Styles*/

@media screen and (max-width : 800px){
    /*Make dropdown links appear inline*/
    #menu {
        position: static;
        display: none;
        margin: 0
    }

    /*Create vertical spacing*/
    #menu li {
        margin-bottom: 1px;
    }
    /*Make all menu links full width*/
    #menu li, #menu li a {
        width: 100%;
        border-bottom: 1px solid #5b5b5b;
    }
    /*Display 'show menu' link*/
    .show-menu {
        display:block;
    }

    .section-icon {
        margin-top: 10px;
    }
}

